// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List.Item should not output styles when unstyled is set 1`] = `
<div>
  <li
    class="Nautilus-ListItem emotion-0"
  >
    raspberry
  </li>
</div>
`;

exports[`List.Item should render list styles 1`] = `
.emotion-0 {
  position: relative;
  margin: 0;
  margin: 0 0 0.4rem;
}

.emotion-0::before {
  position: absolute;
  right: 101%;
}

<div>
  <li
    class="Nautilus-ListItem emotion-0"
    data-testid="listItem"
  >
    hello
  </li>
</div>
`;

exports[`List.Item shouldn't have a margin when \`noMargin\` is true 1`] = `
.emotion-0 {
  position: relative;
  margin: 0;
}

.emotion-0::before {
  position: absolute;
  right: 101%;
}

<li
  class="Nautilus-ListItem emotion-0"
>
  Hello
</li>
`;
